[package]
authors = ["Paul Florence <florencepaul@hotmail.fr>, Benjamin BIGEY <bigey@etud.insa-toulouse.fr>"]
name = "librobot"
version = "0.2.0"
build = "build.rs"

[dependencies]
embedded-hal = "~0.2.1"
nb = "~0.1.1"
libc = { git = "https://github.com/gbip/libc", default-features = false ,features=["align"]}

[dependencies.arrayvec]
default-features = false
features = []
version = "~0.4.7"



[build-dependencies]
cc = { version = "~1.0", default-features = false}
