[package]
authors = ["Paul Florence <florencepaul@hotmail.fr>, Benjamin BIGEY <bigey@etud.insa-toulouse.fr>"]
name = "librobot"
version = "0.2.0"
build = "build.rs"
edition = "2018"

[dependencies]
embedded-hal = "~0.2.1"
nb = "~0.1.1"
cty = "0.1.5"
qei = "~1.0.2"
libm = "~0.1"
serde = {version="1.0", default_features = false}
serde_derive = {version="1.0", default_features = false}
serde-json-core = { git = "https://github.com/japaric/serde-json-core" }
heapless = "0.4.2"
w5500 = "0.1.5"

[dependencies.arrayvec]
default-features = false
features = []
version = "~0.4.7"

[build-dependencies]
cc = { version = "~1.0", default-features = false}

[features]

default = ["primary"]
primary = []
secondary = []
